Fix admin control icon spacing in role editor

--- a/app/styles.less
+++ b/app/styles.less
@@ -778,6 +778,8 @@ span.votes {
 .role-edit-row {
   span.icon {
     color: black;
+    display: inline-block;
+    min-width: 20px;
   }
 }
 
